# VaderModularFuzzer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.klee  README.md  SECURITY.md
test/driver/: CMakeLists.txt  README.md  VMFDriver.c  harness_example.c
test/haystackSUT/: CMakeLists.txt  haystack  haystack.c  haystack_AFL_deferred  haystack_AFL_deferred.c  haystack_AFL_deferred.yaml  haystack_AFL_persist  haystack_AFL_persist.c  haystack_AFL_persist.yaml  haystack_AFL_shmem  haystack_AFL_shmem.c  haystack_AFL_shmem.yaml  haystack_file.yaml  haystack_klee.yaml  haystack_libfuzzer.c  haystack_libfuzzer.yaml  haystack_libfuzzer_dll.yaml  haystack_stdin.yaml
test/magicBytesSUT/: CMakeLists.txt  Makefile  README.md  magicbytes  magicbytes.c  magicbytes.yaml  magicbytes_cmplog  magicbytes_redpawn.yaml
test/unittest/: AFLMutatorTest.cpp  CMakeLists.txt  ConfigManagerTest.cpp  DictionaryMutatorTest.cpp  GAInputGenTest.cpp  MOPTTest.cpp  ModuleTestHelper.cpp  ModuleTestHelper.hpp  OutputSchedulerTest.cpp  RadamsaMutatorTest.cpp  StackedMutatorTest.cpp  StorageModuleTest.cpp  StorageModuleTestFloat.cpp  StorageRegistryTest.cpp  TestAll.cpp  TestConfigInterface.cpp  TestConfigInterface.hpp  TestConfigInterfaceTest.cpp  TrivialSeedInitializationTest.cpp
test/unittest/inputs/AFLForkserverExecutorTest/haystackSUT/: CMakeLists.txt  haystackHang.c  haystack_AFL_deferred  haystack_AFL_deferred.c  haystack_AFL_persist  haystack_AFL_persist.c  haystack_AFL_shmem.c
test/unittest/inputs/AFLForkserverExecutorTest/mimeSUT/: CMakeLists.txt  README.md  mime  mime.c  mime_asan  mime_legacy  mime_stdin.yaml  mimeasan_stdin.yaml  mimelegacy_stdin.yaml
test/unittest/inputs/ConfigManagerTest/: CMakeLists.txt  CoreClassSet.yaml  basicModules.yaml  fakeSUT.yaml
test/unittest/inputs/DictionaryMutator/: CMakeLists.txt  strings-blank-tokens.txt  strings-misconfigured-beginning-double-quote.txt  strings-misconfigured-ending-double-quote.txt  strings.txt
test/unittest/inputs/KleeInitializer/: CMakeLists.txt
test/unittest/linux/: AFLForkserverExecutorTest.cpp  DictionaryInitializationTest.cpp  KleeInitializationTest.cpp
test/unittest/samples/: TemplateMutatorTest.cpp
test/unittest/windows/: FridaExecutorTest.cpp
vmf/: CMakeLists.txt
vmf/cmake/: externalProperties.cmake  external_libs.cmake  vmf.cmake  vmf_imports.cmake  vmf_utils.cmake
vmf/dependencies/: CMakeLists.txt  README.md
vmf/dependencies/curl_windows/: CMakeLists.txt  buildFromSrc.bat
vmf/dependencies/googletest/: CMakeLists.txt
vmf/dependencies/json11/: CMakeLists.txt  json11.cpp  json11.hpp
vmf/dependencies/klee/: CMakeLists.txt  README.md  ktest.py  process_klee_output
vmf/dependencies/licenses/Klee-ktest/: LICENSE
vmf/dependencies/licenses/curl-8.9.1/: LICENSE
vmf/dependencies/plog/: CMakeLists.txt
vmf/dependencies/restclient-cpp/: CMakeLists-vmf.txt  CMakeLists.txt
vmf/dependencies/uthash/: CMakeLists.txt
vmf/dependencies/wingetopt/: CMakeLists.txt
vmf/dependencies/yaml-cpp/: CMakeLists.txt
vmf/src/: CMakeLists.txt
vmf/src/coremodules/: CMakeLists.txt
vmf/src/coremodules/common/formatter/: CRC32Formatter.cpp  CRC32Formatter.hpp
vmf/src/coremodules/common/initialization/: DirectoryBasedSeedGen.cpp  DirectoryBasedSeedGen.hpp  GramatronBasedSeedGen.cpp  GramatronBasedSeedGen.hpp  ServerCorpusInitialization.cpp  ServerCorpusInitialization.hpp  ServerSeedInitialization.cpp  ServerSeedInitialization.hpp
vmf/src/coremodules/common/inputgeneration/: GeneticAlgorithmInputGenerator.cpp  MOPT.cpp  MOPT.hpp  (+5 more)
vmf/src/framework/: CMakeLists.txt  main.cpp
vmf/src/framework/app/: BaseException.cpp  BaseException.hpp  CDMSClient.cpp  CDMSClient.hpp  CMakeLists.txt  ConfigInterface.cpp  ConfigInterface.hpp  ConfigManager.cpp  ConfigManager.hpp  Logging.cpp  Logging.hpp  Module.hpp  ModuleFactory.cpp  ModuleFactory.hpp  ModuleManager.cpp  ModuleManager.hpp  Plugins.cpp  Plugins.hpp  RuntimeException.cpp  RuntimeException.hpp  VaderApplication.cpp  VaderApplication.hpp  VaderUtil.cpp  VaderUtil.hpp  VmfApplication.cpp  VmfApplication.hpp  main.cpp
vmf/src/framework/baseclasses/: ControllerModule.cpp  ControllerModule.hpp  ControllerModulePattern.cpp  ControllerModulePattern.hpp  ExecutorModule.hpp  FeedbackModule.hpp  FormatterModule.hpp  InitializationModule.hpp  InputGeneratorModule.hpp  IterativeController.cpp  IterativeController.hpp  Iterator.hpp  Module.hpp  MutatorModule.hpp  OutputModule.hpp  OutputScheduler.cpp  OutputScheduler.hpp  RunOnceController.cpp  RunOnceController.hpp  SimpleIterator.cpp  SimpleIterator.hpp  SimpleStorage.cpp  SimpleStorage.hpp  StorageEntry.cpp  StorageEntry.hpp  StorageEntryListener.hpp  StorageKeyHelper.hpp  StorageModule.hpp  StorageRegistry.cpp  StorageRegistry.hpp  StorageUserModule.hpp
vmf/src/framework/util/: BaseException.cpp  BaseException.hpp  CDMSClient.cpp  CDMSClient.hpp  CDMSCommandAndCorpusHandler.cpp  CDMSCommandAndCorpusHandler.hpp  ConfigInterface.cpp  ConfigInterface.hpp  Logging.cpp  Logging.hpp  ModuleFactory.cpp  ModuleFactory.hpp  OSAPI.hpp  RuntimeException.cpp  RuntimeException.hpp  UDPMulticastAPI.hpp  VmfRand.cpp  VmfRand.hpp  VmfUtil.cpp  VmfUtil.hpp
vmf/src/modules/: CMakeLists.txt
vmf/src/samples/: README.md
vmf/src/samples/config/: moduleTemplates.yaml
vmf/src/samples/module/: CMakeLists.txt  MyMutator.cpp  MyMutator.hpp  README.md
vmf/src/samples/moduleTemplates/: CMakeLists.txt  TemplateExecutor.cpp  TemplateExecutor.hpp  TemplateFeedback.cpp  TemplateFeedback.hpp  TemplateInitialization.cpp  TemplateInitialization.hpp  TemplateInputGenerator.cpp  TemplateInputGenerator.hpp  TemplateMutator.cpp  TemplateMutator.hpp  TemplateOutput.cpp  TemplateOutput.hpp
vmf/src/scripts/: README.md  c-header  cmake-header  html-header  update-headers.py
vmf/src/scripts/process_klee_output/: process_klee_output.py
vmf/submodules/: CMakeLists.txt  LibAFL-legacy.patch  README.md
vmf/submodules/cmake/: install-AFLplusplus  install-LibAFL-legacy  install-plog  superbuild.cmake
(+353 files in other folders)
