file(GLOB CURL_PKG ${CMAKE_CURRENT_SOURCE_DIR}/curl*vmf.zip)

if(WIN32)

file(ARCHIVE_EXTRACT INPUT ${CURL_PKG} DESTINATION ${CMAKE_BINARY_DIR}/curl )
  file(COPY ${CMAKE_BINARY_DIR}/curl/bin/libcurl.dll DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} )
  find_package(CURL REQUIRED PATHS ${CMAKE_BINARY_DIR}/curl/lib/cmake/CURL  )
  install(IMPORTED_RUNTIME_ARTIFACTS CURL::libcurl_shared RUNTIME)
endif()
