file(GLOB CURL_PKG ${CMAKE_CURRENT_SOURCE_DIR}/curl*vmf.zip)

message("-- Extracting curl_windows")
file(ARCHIVE_EXTRACT INPUT ${CURL_PKG} DESTINATION ${DEPENDENCIES_DIRECTORY}/curl )
file(COPY ${DEPENDENCIES_DIRECTORY}/curl/bin/libcurl.dll DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
find_package(CURL REQUIRED PATHS ${DEPENDENCIES_DIRECTORY}/curl/lib/cmake/CURL)
install(IMPORTED_RUNTIME_ARTIFACTS CURL::libcurl_shared RUNTIME)
